# JgsuSchoolNetwork

./: .gitmodules  CMakeLists.txt  readme.md
All Platform 1.0/: client.c  mysocket.c  mysocket.h
AllPlatform/: myhttp.c  myhttp.h
AllPlatforms/: CMakeLists.txt  client.c  myInfo.c  myInfo.h  myhttp.c  myhttp.h  mysocket.h
AllPlatforms/include/: myhttp.h
AllPlatforms/src/: client.c  myhttp.c  mysocket.c
Linux/: myhttp.c  myhttp.h  mysocket.h
Linux_1.1/: client.c  myhttp.c  mysocket.c  mysocket.h
Windows/: myhttp.c  myhttp.h  mysocket.c  mysocket.h
Windows_1.0/: client.c  myhttp.c  mysocket.c
include/: myInfo.h
sample/Linux/: CMakeLists.txt  mysocket.c
sample/Linux/include/: myhttp.h
sample/Linux/src/: client.c
sample/Windows/: CMakeLists.txt  myhttp.h
sample/Windows/include/: mysocket.h
sample/Windows/src/: client.c  myhttp.c
src/: CMakeLists.txt  client.c  client.cpp  myInfo.c
